--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.3;
+    font-family: "Open Sans", sans-serif;
 }
 
 header, section, nav, footer {
