--- a/Lesson2/design.css/larged.css
+++ b/Lesson2/design.css/larged.css
@@ -1,15 +1,65 @@
-#columnas {
+body {
+    background-color: white;
+    padding: 5px 25px;
+    font-size: 18px;
+    margin: 0;
+    max-height: 960px;
+  }
+
+header {
     text-align: center;
+    background-color: aliceblue;
   }
 
   h1, h2 {
     font-family: 'Open Sans', sans-serif;
-    text-align: center;
     
   }
 
   p {
     font-family: 'Roboto Mono', monospace;
+    text-align: center;
 
   }
 
+ a {
+     font-size: 20px;
+ }
+
+ #columnas {
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: 700px 400px;
+    grid-gap: 60px;
+
+ }
+
+ #contrast {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    
+ }
+
+ #proximity {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    
+ }
+
+ #aligment {
+    grid-column: 3/auto;
+    grid-row: 1/2;
+    
+ }
+
+ .one {
+    grid-column: 1/2;
+    grid-row: 2/3; ;
+ }
+
+ .two {
+    grid-column: 2/3;
+    grid-row: 2/3; ;
+ } 
+ 
+     
