--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -1,5 +1,5 @@
-@media only screen and (min-width: 33em) {
- main, header, img, footer {
-     display: inline;
- }
+@media only screen and (min-width: 33em){
+    main{
+        display: inline;
+    }
 }
