--- a/Lesson2/design.css/smalld.css
+++ b/Lesson2/design.css/smalld.css
@@ -7,7 +7,7 @@ body {
   }
 
 
-header, footer {
+header {
     text-align: center;
     background-color: aliceblue;
   }
@@ -72,7 +72,7 @@ header, footer {
  footer {
      padding-top: -35px;
      font-size: 20px;
- }
+     text-align: center;
 
  
 
