--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -1,10 +1,14 @@
-@media only screen and (min-width: 33em) {
-    main {
-        float: left;
+@media (min-width: 32.5em) { 
+    main{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
-    main img {
-        float: left;
-    }
+  
 }
+
+
+
+
+
        
     
