--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -1,4 +1,18 @@
-@media (min-width: 32.5em) { 
+@media (min-width: 800px) {
+    #columnas {
+        display: grid;
+        grid-template-columns: 366px 366px;
+        grid-template-rows: 700px 300px 700px 300px;
+        grid-gap: 30px;
+    }
+
+    #aligment {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        margin-left: 20px;
+
+     }
+}
 
 
 
