--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -1,8 +1,8 @@
-@media (min-width: 800px) {
-    #columnas {
+@media (max-width: 800px) {
+    main {
         display: grid;
         grid-template-columns: 366px 366px;
-        grid-template-rows: 700px 300px 700px 300px;
+        grid-template-rows: 700px 300px 700px 150px;
         grid-gap: 30px;
     }
 
@@ -12,6 +12,19 @@
         margin-left: 20px;
 
      }
+
+     .three {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        margin-top: -3900px;
+        margin-left: 20px;
+     }
+
+     footer {
+        margin-top: -3500px;
+     }
+
+   
 }
 
 
