--- a/Lesson2/design.css/larged.css
+++ b/Lesson2/design.css/larged.css
@@ -1,4 +1,38 @@
-@media (min-width: 64em) { 
-   
-  
+@media (max-width: 400px) { 
+    main {
+        display: grid;
+        grid-template-columns: 366px;
+        grid-template-rows: 700px 300px 700px 150px 700px 150px;
+    }
+
+    #contrast {
+        grid-row: 1/2;
+        margin-left: 20px;
+    }
+
+    .one {
+        grid-row: 2/3;
+        margin-left: 20px;
+    }
+
+    #proximity {
+        grid-row: 3/4;
+        margin-left: 20px;
+    }
+
+    .two {
+        grid-row: 4/5;
+        margin-left: 20px;
+    }
+
+    #aligment {
+        grid-row: 5/6;
+        margin-left: 20px;
+    }
+
+    .three {
+        grid-row: 6/7;
+        margin-left: 20px;
+    }
+
 }
