--- a/Lesson2/design.css/larged.css
+++ b/Lesson2/design.css/larged.css
@@ -1,8 +1,7 @@
-@media (max-width: 400px) { 
-    main {
-        display: grid;
-        grid-template-columns: 366px;
-        grid-template-rows: 700px 300px 700px 150px 700px 150px;
+@media (max-width: 440px) { 
+    #columnas {
+        display: grid;;
+        grid-template-rows: 700px 300px 700px 300px 700px 300px;
     }
 
     #contrast {
