--- a/Lesson2/design.css/larged.css
+++ b/Lesson2/design.css/larged.css
@@ -1,37 +1,5 @@
 @media (max-width: 440px) { 
-    #columnas {
-        display: grid;;
-        grid-template-rows: 700px 300px 700px 300px 700px 300px;
+    main {
+        display: block;
     }
-
-    #contrast {
-        grid-row: 1/2;
-        margin-left: 20px;
-    }
-
-    .one {
-        grid-row: 2/3;
-        margin-left: 20px;
-    }
-
-    #proximity {
-        grid-row: 3/4;
-        margin-left: 20px;
-    }
-
-    .two {
-        grid-row: 4/5;
-        margin-left: 20px;
-    }
-
-    #aligment {
-        grid-row: 5/6;
-        margin-left: 20px;
-    }
-
-    .three {
-        grid-row: 6/7;
-        margin-left: 20px;
-    }
-
 }
