--- a/Lesson2/design.css/larged.css
+++ b/Lesson2/design.css/larged.css
@@ -1,5 +1,39 @@
 @media (max-width: 440px) { 
     main {
-        display: block;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
+
+    #contrast {
+        grid-row: 1/2;
+       
+    }
+
+    .one {
+        grid-row: 2/3;
+    
+    }
+
+    #proximity {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        
+    }
+
+    .two {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        margin-top: -3900px;
+    }
+
+    #aligment {
+        grid-row: 5/6;
+        margin-top: -3700px;
+    }
+
+    .three {
+        grid-row: 6/7;
+        margin-top: -3900px;
+    } 
+    
 }
