--- a/Lesson2/design.css/smalld.css
+++ b/Lesson2/design.css/smalld.css
@@ -1,42 +1,93 @@
-@media (max-width: 440px) { 
-    main {
-        display: grid;
-        grid-template-rows: 1fr auto;
-    }
-
-    #contrast {
-        grid-row: 1/2;
-       
-    }
-
-    .one {
-        grid-row: 2/3;
-    
-    }
-
-    #proximity {
-        grid-column: 1/2;
-        grid-row: 3/4;
-        
-    }
-
-    .two {
-        grid-column: 1/2;
-        grid-row: 4/5;
-        margin-top: -3900px;
-    }
-
-    #aligment {
-        grid-row: 5/6;
-        margin-top: -3700px;
-        margin-left: -1px;
-      
-    }
-
-    .three {
-        grid-row: 6/7;
-        margin-top: -3900px;
-        margin-left: -1px;
-    } 
-    
+body {
+    background-color: white;
+    padding: 25px 25px 25px 25px;
+    font-size: 18px;
+    margin: 0;
+    max-width: 1150px;
+    max-height: 400px;
+  }
+main {
+   width: auto;
 }
+
+header {
+    text-align: center;
+    background-color: aliceblue;
+    
+  }
+
+  h1, h2 {
+    font-family: 'Open Sans', sans-serif;
+
+    
+  }
+
+  p {
+    font-family: 'Roboto Mono', monospace;
+    text-align: left;
+ 
+  }
+
+ a {
+     font-size: 20px;
+     color: #DC0073;  
+ }
+
+ #columnas {
+    display: grid;
+    grid-template-columns: 366px 366px 366px;
+    grid-template-rows: 700px auto;
+    grid-gap: 30px;
+
+ }
+
+ #contrast {
+    grid-column: 1/2;
+    grid-row: 1/2;
+   
+ }
+
+ #proximity {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    
+ }
+
+ #aligment {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    margin-right: -300px;
+ }
+
+ .one {
+    grid-column: 1/2;
+    grid-row: 2/3; 
+    margin-top: -10px;
+    
+ } 
+    
+ 
+
+ .two {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-top: -10px;
+ } 
+    
+ 
+
+ .three {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    margin-top: -10px;
+ } 
+    
+ 
+ 
+ 
+ footer {
+     margin-top: 20px;
+     font-size: 20px;
+     text-align: center;
+    
+ }
