--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -1,36 +1,6 @@
-@media (max-width: 830px) {
-    main {
-        display: grid;
-        grid-template-columns: 366px 366px;
-        grid-template-rows: 700px 300px 700px 150px;
-        grid-gap: 30px;
-    }
-
-    #aligment {
-        grid-column: 1/2;
-        grid-row: 3/4;
-        margin-left: 20px;
-
-     }
-
-     .three {
-        grid-column: 1/2;
-        grid-row: 4/5;
-        margin-top: -3900px;
-        margin-left: 20px;
-     }
-
-     footer {
-        margin-top: -3500px;
-     }
-
-   
+@media (min-width: 32.5em) {
+   main {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+   }
 }
-
-
-
-
-
-
-       
-    
