--- a/Lesson2/design.css/smalld.css
+++ b/Lesson2/design.css/smalld.css
@@ -40,5 +40,17 @@ footer {
    
 }
 
+@media (min-width: 32.5em) {
+   main {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+   }
+}
 
+@media (min-width: 64em) {
+   main {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+   }
+}
 
