--- a/Lesson2/design.css/mediumd.css
+++ b/Lesson2/design.css/mediumd.css
@@ -8,7 +8,7 @@
     #aligment {
         grid-column: 1/2;
         grid-row: 3/4;
-        margin-left; -60px;
+        margin-left: -60px;
         
     }
     #one {
