--- a/Lesson2/design.css/smalld.css
+++ b/Lesson2/design.css/smalld.css
@@ -60,3 +60,61 @@ footer {
     margin-top: 50px;  
    
 }
+@media (min-width: 32.5em) {
+   main {
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       grid-template-rows: 700px 150px 700px 300px;
+       grid-gap: 20px;
+   }
+   #aligment {
+       grid-column: 1/2;
+       grid-row: 3/4;
+       margin-left: -60px;
+       
+   }
+   #one {
+       grid-column: 1/2;
+       grid-row: 2/3;
+       margin-top: -90px;
+      
+   }
+   #two {
+       grid-column: 2/3;
+       grid-row: 2/3;
+       margin-top: -90px;
+      
+   }
+   #three {
+       grid-column: 1/2;
+       grid-row: 4/5;
+       margin-top: -90px;
+      
+      
+      
+   }
+   
+}
+@media (min-width: 64em) {
+   main {
+       display: grid;
+       grid-template-columns: 1fr 1fr 1fr;
+       grid-template-rows: 700px 100px;
+   }
+   #one {
+       grid-column: 1/2;
+       grid-row: 2/3;
+       margin-top: -180px;
+      
+   }
+   #two {
+       grid-column: 2/3;
+       grid-row: 2/3;
+       margin-top: -180px;
+   }
+   #three {
+      grid-column: 3/4;
+      grid-row: 2/3;
+      margin-top: -180px;
+   }
+}
