--- a/Lesson2/design.css/smalld.css
+++ b/Lesson2/design.css/smalld.css
@@ -45,7 +45,7 @@ img {
    font-family: 'Roboto Mono', monospace;
    text-align: left;
    padding: 10px;
-   margin-top: -400px;
+   margin-top: -410px;
   
  }
 
@@ -70,7 +70,7 @@ footer {
    #aligment {
        grid-column: 1/2;
        grid-row: 3/4;
-       margin-left: -60px;
+       margin-right: -60px;
        
    }
    #one {
