--- a/Lesson3/css/small.css
+++ b/Lesson3/css/small.css
@@ -44,14 +44,16 @@ h1, h2 {
  }
 
  img {
-    width: 80%;
-    box-align: center;
-    padding-left: 110px;
+    width: 500px;
+    padding: 20px 20px 20px 20px;
+    
+    
  }
 
 #logo {
     width: 25%;
-    padding-left: 350px;
+    padding-left: 20px;
+  
 }
 
  nav a {
@@ -71,7 +73,7 @@ h1, h2 {
 
 header, main, footer, nav {
     margin: 1rem auto;
-     max-width: 1100px;
+     max-width: 960px;
   }
 
 .name, .purpose, .domain, .logo {
