--- a/Lesson3/css/small.css
+++ b/Lesson3/css/small.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #90EE90;
+    background-color: #aeeeae;
     font-size: 18px;
     margin: 0;
     max-height: 80%;
@@ -7,7 +7,7 @@ body {
 
 header {
     text-align: center;
-    background-color:blue;
+    background-color:#AF125A ;
 
 }
 
@@ -57,7 +57,7 @@ h1, h2 {
 }
 
  nav a {
-    color: #004777;
+    color: #043747;
     font-size: 1.2em;
   }
 
@@ -95,4 +95,17 @@ header, main, footer, nav {
 
 .one {
     padding-top: 40px;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 50%;
+    padding-left: 20px;
+    padding-bottom: 10px;
+}
+table {
+    padding-left: 20px;
+    padding-bottom: 10px;
+
 }
