--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,14 +1,12 @@
 body {
-    background-color: #ffffff;
+    background-color:#c0c3bb;
     font-size: 18px;
     margin: 0;
-    max-height: 80%;
-    max-width: 100%;
+
 }
 
 header {
     background-color: #008BF8;
-	padding: 5px 0;
 	align-items:center;
     justify-content:center;
     display: flex;
@@ -20,7 +18,30 @@ header {
 }
 
 header img {
-    float: left;
-    height: auto;
-    
+   margin-right: 125px;
+   margin-top: -15px;
 }
+
+#titulo {
+    font-size: 65px;
+    color:#DC0073;
+    margin-left: -45px;
+}
+
+#slogan {
+  
+    margin-bottom: 90px;
+    color:#DC0073;
+    margin-left: -25px;
+}
+
+nav ul {
+    list-style: none; /*removes the bullets! */
+    text-align: center;
+ }
+
+ main, footer {
+     min-width: 700px;
+     display: block;
+     margin: 0;
+ }
