--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#c0c3bb;
+    background-color:#b4bea7;
     font-size: 18px;
     margin: 0;
 
@@ -30,9 +30,18 @@ header img {
 
 #slogan {
   
-    margin-bottom: 90px;
+    margin-bottom: 60px;
     color:#DC0073;
     margin-left: -25px;
+}
+
+nav {
+    background-color:  #00589b;
+    margin-top: -20px;
+}
+
+nav a {
+    color: #FFFFFF;
 }
 
 nav ul {
@@ -40,8 +49,41 @@ nav ul {
     text-align: center;
  }
 
+nav button {
+    margin: 0.2rem 2%;
+    
+}
+
+nav a:hover{
+	color:#E95DA6;
+	background-color:#F5B700;
+}
+
+nav ul.hide {
+    display: none;
+
+}
+
  main, footer {
-     min-width: 700px;
-     display: block;
-     margin: 0;
+    margin: 1rem auto;
+    max-width: 960px;
  }
+
+ main {
+     background-color: #FFFFFF;
+ }
+
+ footer {
+    background-color: #00589b;
+    font-size: 25px;
+    text-align: center;
+ }
+
+.contenedor {
+    background-color: #4b7494;
+    padding-left: left;
+    display: block;
+    margin: 2px auto;
+    color:#65B800;
+    text-decoration: none;
+}
