--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -9,30 +9,37 @@ header {
     background-color: #008BF8;
 	align-items:center;
     justify-content:center;
-    display: flex;
+    
+    padding: 5px 0;
 }
 
 #encabezado {
-    display: flex;
-    flex-direction: column;
+    display: block ;
 }
 
 header img {
-   margin-right: 125px;
-   margin-top: -15px;
+    width: 80px;
+    height: auto;
+    float: left;
+    padding: 10px 10px 0px 15px ;
 }
 
 #titulo {
-    font-size: 65px;
+    font-size: 45px;
     color:#DC0073;
-    margin-left: -45px;
+    
+
+    text-align: center;
 }
 
 #slogan {
   
     margin-bottom: 60px;
     color:#DC0073;
-    margin-left: -25px;
+    
+    font-size: 2rem;
+    margin-top: -30px;
+    text-align: center;
 }
 
 nav {
