--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -7,4 +7,13 @@
         flex: 1 1 100%;
 
     }
+
+    nav button {
+        display: none;
+    
+    }
+
+    nav ul.hide  {
+        display: flex;
+    }
 }
