--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -88,6 +88,7 @@ nav ul.hide {
     background-color: #00589b;
     font-size: 25px;
     text-align: center;
+    color: white;
  }
 
 .contenedor {
