--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -3,8 +3,6 @@
     list-style: none; /*removes the bullets! */
 	display: grid;
 	grid-template-columns: repeat(1fr);
-    margin-left: 20px;
-    margin-right: -60px;
     }
 
     nav button {
@@ -18,6 +16,7 @@
 
     nav ul li {
         flex: 1 1 100%;
+        display: inline-block;
 
     }
 }
