--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#b4bea7;
+    background-color: white;
     font-size: 18px;
     margin: 0;
 
@@ -26,6 +26,28 @@ header img {
 #ciudad {
     text-align: center;
     color:#DC0073;
+}
+
+#hero {
+    width: 100%;
+}
+
+#summary {
+    position: absolute;
+	top: 475px;
+	left: 80px;
+	background: radial-gradient(#eee, #4567aa);
+	border: 1px solid #000;
+	padding: 5px;
+	box-shadow: 0 0 30px #111;
+    opacity: .8;
+    text-align: center;
+    line-height: 5px;
+    color: green;
+}
+
+#clima {
+    text-decoration: underline;
 }
 
 #titulo {
@@ -97,7 +119,7 @@ footer {
 }
 
 .contenedor {
-    background-color: #4b7494;
+    background-color:white;
     padding-left: left;
     display: block;
     margin: 2px auto;
