--- a/Lesson 5/css/medium.css
+++ b/Lesson 5/css/medium.css
@@ -13,5 +13,60 @@
         padding: 7px;
     }
 
+    #one {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px
+
+    }
+
+    #parrafo {
+        grid-column: 1/3;
+    }
+
+    #articulo {
+        grid-column: 3/4;
+        width: 100%;
+        margin-top: 20px;
+    }
+
+
+
+    #summary {
+        left: 200px;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 250px 50px;
+        grid-gap: 20px;
+    }
+
+    #contacto {
+        width: 100%;
+        height: 100%;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin: 10px;
+    }
+
+    #information {
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+
+    #pie {
+        background-color: #00589b;
+        grid-column: 1/4;
+        grid-row: 2/3;
+        height: 50px;
+    }
+
+    table, th, td {
+        margin-left: 150px;
+        width: 700px;
+    }
+
 
 }
