--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -10,6 +10,7 @@ header {
 	align-items:center;
     justify-content:center;
     padding: 5px 0;
+    height: 150px;
 }
 
 #encabezado {
@@ -35,7 +36,7 @@ header img {
 #summary {
     position: absolute;
 	top: 475px;
-	left: 80px;
+	left: 60px;
 	background: radial-gradient(#eee, #4567aa);
 	border: 1px solid #000;
 	padding: 5px;
@@ -48,6 +49,27 @@ header img {
 
 #clima {
     text-decoration: underline;
+}
+
+#five {
+    text-align: center;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin-left: 85px;
+    
+}
+
+
+th {
+    background-color: #008BF8;
+    color: white;
+}
+
+#articulo {
+    width: 100%;
 }
 
 #titulo {
@@ -108,20 +130,21 @@ main, footer {
 
 main {
     background-color: #FFFFFF;
-    margin-top: -22px
+    margin-top: -20px
 }
 
 footer {
     background-color: #00589b;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     color: white;
 }
 
-.contenedor {
-    background-color:white;
-    padding-left: left;
-    display: block;
-    margin: 2px auto;
-    text-decoration: none;
+#contacto {
+    width: 100%;
+
+}
+
+#web {
+    color: white;
 }
