--- a/Lesson 5/css/medium.css
+++ b/Lesson 5/css/medium.css
@@ -31,7 +31,6 @@
     }
 
 
-
     #summary {
         left: 200px;
     }
@@ -41,6 +40,9 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 250px 50px;
         grid-gap: 20px;
+        border: 1px solid #FFDB30;
+        box-shadow: 10px 10px 10px #004777;
+
     }
 
     #contacto {
@@ -49,6 +51,8 @@
         grid-column: 1/2;
         grid-row: 1/2;
         margin: 10px;
+        border: 1px solid #FFDB30;
+	    
     }
 
     #information {
@@ -66,6 +70,11 @@
     table, th, td {
         margin-left: 150px;
         width: 700px;
+    }
+
+    #hero {
+        border: 1px solid #FFDB30;
+	    box-shadow: 10px 10px 10px #004777;
     }
 
 
