--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -21,7 +21,7 @@ header img {
     width: 80px;
     height: auto;
     float: left;
-    padding: 10px 10px 0px 15px ;
+    padding: 10px 10px 0px 15px;
 }
 
 #ciudad {
@@ -31,6 +31,8 @@ header img {
 
 #hero {
     width: 100%;
+    border: 1px solid #FFDB30;
+	box-shadow: 10px 10px 10px #004777;
 }
 
 #summary {
@@ -70,6 +72,8 @@ th {
 
 #articulo {
     width: 100%;
+    border: 1px solid #FFDB30;
+	box-shadow: 10px 10px 10px #004777;
 }
 
 #titulo {
@@ -147,4 +151,24 @@ footer {
 
 #web {
     color: white;
+}
+
+.active {
+    background: #5fd35f;
+    text-decoration: underline;
+}
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;
+        
+}
+.moveDown {
+    margin-top: 3em;
 }
