--- a/Lesson 5/css/medium.css
+++ b/Lesson 5/css/medium.css
@@ -30,9 +30,24 @@
         margin-top: 20px;
     }
 
+    #five {
+        text-align: center;
+    }
+
 
     #summary {
-        left: 200px;
+            left: 200px;
+            position: absolute;
+            top: 465px;
+            background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 5px;
+            color: green;
+        
     }
 
     footer {
