--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -53,6 +53,11 @@ header img {
     text-decoration: underline;
 }
 
+h2 {
+    text-align: center;
+    color:#DC0073
+}
+
 #five {
     text-align: center;
 }
