--- a/Lesson 5/css/medium.css
+++ b/Lesson 5/css/medium.css
@@ -16,16 +16,19 @@
     #one {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 20px
+        grid-template-rows: 50px 50px 80px 80px 80px;
+        margin-top: 15px;
 
     }
 
-    #parrafo {
+    .parrafo {
         grid-column: 1/3;
+        margin-top: 5px;
     }
 
     #articulo {
         grid-column: 3/4;
+        grid-row: 2/4;
         width: 100%;
         margin-top: 20px;
     }
