--- a/Lesson 5/css/large.css
+++ b/Lesson 5/css/large.css
@@ -27,9 +27,41 @@
 
     }
 
+    .parrafo {
+        grid-column: 1/3;
+        margin-top: 5px;
+    }
+
+    #articulo {
+        grid-column: 3/4;
+        grid-row: 2/4;
+        width: 100%;
+        margin-top: 20px;
+    }
+
     #contacto {
         height: 100%;
     }
+
+    table, th, td {
+        margin-left: 150px;
+        width: 700px;
+    }
+
+    #summary {
+        left: 250px;
+        position: absolute;
+        top: 510px;
+        background: radial-gradient(#eee, #4567aa);
+        border: 1px solid #000;
+        padding: 5px;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+        text-align: center;
+        line-height: 1px;
+        color: green;
+    
+}
 
    
 }
