--- a/Lesson 6/css/small.css
+++ b/Lesson 6/css/small.css
@@ -30,10 +30,10 @@ header img {
 }
 
 #hero {
-    width: auto;
-    height: auto;
+    width: 100%;
     border: 1px solid #FFDB30;
     box-shadow: 10px 10px 10px #004777;
+    align-items: center;
 }
 
 #summary {
