--- a/Lesson 6/css/large.css
+++ b/Lesson 6/css/large.css
@@ -49,9 +49,9 @@
     }
 
     #summary {
-        left: 250px;
+        left: 280px;
         position: absolute;
-        top: 510px;
+        top: 530px;
         background: radial-gradient(#eee, #4567aa);
         border: 1px solid #000;
         padding: 5px;
@@ -60,8 +60,40 @@
         text-align: center;
         line-height: 1px;
         color: green;
+        font-size: medium;
     
 }
 
-   
+#primero {
+    display: block;
+    margin: auto;
+}
+
+.small {
+    display: none;
+    position: absolute;
+    top: 310px;
+    right: 30%;
+    color:white;
+    font-size: 30px;
+}
+
+.medium {
+    display: none;
+    position: absolute;
+    top: 310px;
+    right: 30%;
+    color:white;
+    font-size: 30px;
+}
+
+.large {
+    position: absolute;
+    top: 310px;
+    right: 30%;
+    color:white;
+    font-size: 30px;
+}
+
+
 }
