--- a/Lesson 6/css/large.css
+++ b/Lesson 6/css/large.css
@@ -48,26 +48,36 @@
         width: 700px;
     }
 
-    #summary {
-        left: 700px;
-        position: absolute;
-        top: 530px;
-        background: radial-gradient(#eee, #4567aa);
-        border: 1px solid #000;
-        padding: 5px;
-        box-shadow: 0 0 30px #111;
-        opacity: .8;
-        text-align: center;
-        line-height: 1px;
-        color: green;
-        font-size: medium;
-    
-}
+    #herosum {
+        display: grid;
+        grid-template-columns: 200px 200px 200px 200px;
+    }
 
-#primero {
-    display: block;
-    margin: auto;
-}
+    #hero {
+        grid-column: 1/5;
+        grid-row: 1/4;
+    }
+
+    #primero {
+        border: 1px solid #FFDB30;
+	    box-shadow: 10px 10px 10px #004777;
+    }
+
+    #summary {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            top: 435px;
+            background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 0.5px;
+            color: green;
+            font-size: small;
+        
+    }
 
 .small {
     display: none;
