--- a/Lesson 6/css/medium.css
+++ b/Lesson 6/css/medium.css
@@ -22,10 +22,24 @@
         display: inline-block;
     }
 
+    #herosum {
+        display: grid;
+        grid-template-columns: 1fr 180px 1fr 1fr;
+    }
+
+    #hero {
+        grid-column: 1/5;
+        grid-row: 1/4;
+    }
+
+    #primero {
+        border: 1px solid #FFDB30;
+	    box-shadow: 10px 10px 10px #004777;
+    }
 
     #summary {
-            left: 15px;
-            position: absolute;
+            grid-column: 2/3;
+            grid-row: 1/2;
             top: 435px;
             background: radial-gradient(#eee, #4567aa);
             border: 1px solid #000;
@@ -77,15 +91,6 @@
         width: 400px;
     }
 
-    #hero {
-        border: 1px solid #FFDB30;
-	    box-shadow: 10px 10px 10px #004777;
-    }
-
-    #primero {
-        display: block;
-        margin: auto;
-    }
 
     .small {
         display: none;
