--- a/Lesson 6/css/large.css
+++ b/Lesson 6/css/large.css
@@ -51,6 +51,7 @@
     #herosum {
         display: grid;
         grid-template-columns: 200px 200px 200px 200px;
+        margin-left: 100px;
     }
 
     #hero {
