--- a/Lesson 6/css/small.css
+++ b/Lesson 6/css/small.css
@@ -29,58 +29,58 @@ header img {
     color:#DC0073;
 }
 
-
+#herosum {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-left: 0;
+}
 
 #hero {
-    width: 100%;
-
+    grid-column: 1/5;
+    grid-row: 1/4;
 }
 
 #primero {
-    display: block;
-    margin: auto;
     border: 1px solid #FFDB30;
     box-shadow: 10px 10px 10px #004777;
-}
-
-.small {
-    position: static;
-    top: 310px;
-    right: 30%;
-    color:white;
-    font-size: small;
-}
-
-.medium {
-    display: none;
-    position: absolute;
-    top: 210px;
-    right: 10%;
-    color:white;
-    font-size: 30px;
-}
-
-.large {
-    display: none;
-    position: absolute;
-    top: 110px;
-    right: 30%;
-    color:white;
-    font-size: 30px;
+    display: block;
+        margin: auto;
 }
 
 #summary {
-    position: static;
-	top: 465px;
-	left: 60px;
-	background: radial-gradient(#eee, #4567aa);
-	border: 1px solid #000;
-	padding: 0px;
-	box-shadow: 0 0 30px #111;
-    opacity: .8;
+        grid-column: 1/5;
+        grid-row: 5/6;
+        top: 435px;
+        background: radial-gradient(#eee, #4567aa);
+        border: 1px solid #000;
+        padding: 0.5px;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+        text-align: center;
+        line-height: 0.5px;
+        color: green;
+        font-size: small;
+    
+}
+
+.label {
+    display: inline;
+    grid-column: 3/4;
+    grid-row: 1/2;
+    color:rgb(177, 23, 23);
+    font-size: 30px;
     text-align: center;
-    line-height: 5px;
-    color: green;
+}
+
+#small {
+    display: inline;
+}
+#medium {
+    display: none;
+}
+
+#large {
+    display: none;
 }
 
 #clima {
@@ -207,6 +207,8 @@ footer {
 .parrafo {
     padding-left: 5px;
 }
+
+
 
 
 
