--- a/Lesson 6/css/medium.css
+++ b/Lesson 6/css/medium.css
@@ -1,4 +1,8 @@
 @media (min-width: 32.5em) {
+    header {
+        height: 150px;
+    }
+    
     nav{
         text-align: center;
     }
@@ -60,7 +64,7 @@
         display: inline;
         grid-column: 3/4;
         grid-row: 1/2;
-        color:rgb(177, 23, 23);
+        color: white;
         font-size: 30px;
         text-align: right;
     }
