--- a/Lesson 6/css/medium.css
+++ b/Lesson 6/css/medium.css
@@ -28,7 +28,7 @@
 
     #herosum {
         display: grid;
-        grid-template-columns: 1fr 180px 1fr 1fr;
+        grid-template-columns: 50px 180px 1fr 1fr;
         margin-left: 0;
     }
 
