--- a/Lesson 7/css/large.css
+++ b/Lesson 7/css/large.css
@@ -83,7 +83,7 @@
             text-align: center;
             line-height: 0.5px;
             color: green;
-            font-size: small;
+            font-size: large;
         
     }
 
