--- a/Lesson 7/css/large.css
+++ b/Lesson 7/css/large.css
@@ -87,4 +87,15 @@
         
     }
 
+    .imagen :hover {
+        border: 1px solid #FFDB30;
+	    box-shadow: 10px 10px 10px #004777;
+    }
+
+    figure {
+        text-align: center;
+
+    }
+
+
 }
