--- a/Lesson 7/css/small.css
+++ b/Lesson 7/css/small.css
@@ -191,17 +191,14 @@ footer {
 
 #galeria {
     display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
-     max-width: 1024px;
+     grid-template-columns: 1fr;
      gap: 10px;
-     margin-left: auto;
-     margin-right: auto;
-     grid-template-rows: repeat(auto-fill,minmax(310px,1fr));
 }
 
 figure {
     display: block;
     margin: auto;
+    text-align: center;
 }
 
 
