--- a/Lesson 7/css/large.css
+++ b/Lesson 7/css/large.css
@@ -97,5 +97,12 @@
 
     }
 
+    #galeria {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 
 }
