--- a/Lesson 7/css/medium.css
+++ b/Lesson 7/css/medium.css
@@ -124,6 +124,16 @@
         color:white;
         font-size: 30px;
     }
+#galeria {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+figure {
+    text-align: center;
+
+}
 
 }
