--- a/Lesson 8/css/medium.css
+++ b/Lesson 8/css/medium.css
@@ -125,4 +125,25 @@
         font-size: 30px;
     }
 
+    form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    textarea {
+        grid-column: 1/4;
+        border: solid 2px #999;
+        border-radius: 4px;
+        width: 100%;
+        margin: 0;
+        }
+
+    .enviar {
+        grid-column: 1/3;
+        margin: auto;
+        padding: 10px;
+        background-color: yellow;
+        margin-top: 20px;
+        }
 }
+
