--- a/Lesson 8/css/small.css
+++ b/Lesson 8/css/small.css
@@ -214,6 +214,65 @@ figure img {
     width: 100%;
 }
 
+form {
+    display: block;
+    font-weight: bold;
+}
+
+form fieldset {
+    
+    border: 2px solid #0b7e3f;
+    border-radius: 10px;
+    
+    }
+
+legend {
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: bold;
+    color:#004777;
+}
+
+.unico, option, select {
+    padding: 10px;
+    background-color: #d9e1eb;
+    color: red;
+}
+
+label {
+    margin-top: 10px;
+}
+
+#ratingvalue {
+    color: red;
+}
+
+#rating {
+    color: red;
+}
+
+.enviar {
+    display: block;
+    margin: auto;
+    padding: 10px;
+    background-color: yellow;
+    }
+
+textarea {
+    border: solid 2px #999;
+    border-radius: 4px;
+    width: 100%;
+    margin: 0;
+}
+
+select option {
+    color: red;
+}
+
+
+
+
 
 
 
