--- a/Lesson 8/css/small.css
+++ b/Lesson 8/css/small.css
@@ -270,6 +270,17 @@ select option {
     color: red;
 }
 
+input:invalid+span:after {
+    position: absolute; content: '✖';
+    padding-left: 5px;
+  }
+  
+  input:valid+span:after {
+    position: absolute;
+    content: '✓';
+    padding-left: 5px;
+  }
+
 
 
 
