--- a/Lesson 8/css/medium.css
+++ b/Lesson 8/css/medium.css
@@ -126,12 +126,11 @@
     }
 
     form {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: block;
+        
     }
 
     textarea {
-        grid-column: 1/4;
         border: solid 2px #999;
         border-radius: 4px;
         width: 100%;
@@ -139,7 +138,6 @@
         }
 
     .enviar {
-        grid-column: 1/3;
         margin: auto;
         padding: 10px;
         background-color: yellow;
