--- a/Lesson 8/css/small.css
+++ b/Lesson 8/css/small.css
@@ -238,6 +238,7 @@ legend {
     padding: 10px;
     background-color: #d9e1eb;
     color: red;
+    width: auto;
 }
 
 label {
@@ -263,6 +264,7 @@ textarea {
     border: solid 2px #999;
     border-radius: 4px;
     width: 100%;
+    height: 200px;
     margin: 0;
 }
 
@@ -273,13 +275,17 @@ select option {
 input:invalid+span:after {
     position: absolute; content: '✖';
     padding-left: 5px;
-  }
-  
-  input:valid+span:after {
+}
+
+input:valid+span:after {
     position: absolute;
     content: '✓';
     padding-left: 5px;
-  }
+}
+
+.comment {
+    height: 250px;
+}
 
 
 
