--- a/Lesson 9/css/prophets.css
+++ b/Lesson 9/css/prophets.css
@@ -7,6 +7,8 @@ body{
 main {
     max-width: 960px;
     flex-grow: 1;
+    margin: auto;
+    display: block;
 }
 
 h1 {
@@ -25,4 +27,5 @@ h1 {
 footer{
     margin: auto;
     display: block;
+    font-size: 20px;
 }
