--- a/Lesson 9/css/prophets.css
+++ b/Lesson 9/css/prophets.css
@@ -6,8 +6,10 @@ main {
     margin: auto;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
+    color: blue;
+    font-style: comic;
 }
 
 .cards {
@@ -17,23 +19,36 @@ h1 {
      gap: 5px;
      margin-left: 0;
      margin-right: 0;
-     grid-template-rows: repeat(auto-fill,minmax(200px,1fr));
+     grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
+     background-color: rgb(170, 169, 199);
 }
 
 section {
     display: block;
     margin: auto;
-    text-align: center;
+    background-color: rgb(170, 169, 199);
+    border: 1px solid black;
 }
 
 section img {
-    width: 100%;
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    display: block;
+    margin-bottom: 10px;
+    box-shadow: 10px 0 20px black;
+}
+
+p {
+    font-size: small;
+    text-align: center;
 }
 
 
 footer{
     margin: auto;
     display: block;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: bold;
     text-align: center;
 }
