--- a/Lesson 9/css/prophets.css
+++ b/Lesson 9/css/prophets.css
@@ -4,12 +4,14 @@ body{
 main {
     max-width: 960px;
     margin: auto;
+    background-color: rgb(207, 217, 223);
+    box-shadow: 5px 0 30px  rgb(81, 127, 156);;
 }
 
 h1, h2 {
     text-align: center;
     color: blue;
-    font-style: comic;
+    font-family: 'Times New Roman', serif;
 }
 
 .cards {
@@ -17,10 +19,9 @@ h1, h2 {
      grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
      max-width: 100%;
      gap: 5px;
-     margin-left: 0;
-     margin-right: 0;
+     margin: 5px;
      grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
-     background-color: rgb(170, 169, 199);
+     
 }
 
 section {
