--- a/Lesson 9/css/prophets.css
+++ b/Lesson 9/css/prophets.css
@@ -32,8 +32,8 @@ section {
 }
 
 section img {
-    width: 50%;
-    height: 50%;
+    width: 80%;
+    height: 200px;
     margin: auto;
     display: block;
     margin-bottom: 10px;
