--- a/Lesson 9/css/large.css
+++ b/Lesson 9/css/large.css
@@ -112,3 +112,42 @@
         }
 
 }
+
+/*home page*/
+h1, h2 {
+    text-align: center;
+    color: blue;
+    font-family: 'Times New Roman', serif;
+}
+
+.home {
+    display: grid;
+     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+     max-width: 100%;
+     gap: 5px;
+     margin: 5px;
+     grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
+     
+}
+
+section {
+    display: block;
+    margin: auto;
+    background-color: rgb(170, 169, 199);
+    border: 1px solid black;
+}
+
+section img {
+    width: 90%;
+    height: 200px;
+    margin: auto;
+    display: block;
+    margin-bottom: 10px;
+    box-shadow: 10px 0 20px black;
+}
+
+p {
+    font-size: medium;
+    text-align: center;
+    margin: 6px;
+}
