--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -163,19 +163,18 @@ h3 {
 
 .home {
     display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+     grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
      max-width: 100%;
      gap: 5px;
      margin: 5px;
-     grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
-     
 }
 
-section {
+.home section {
     display: block;
     margin: auto;
     background-color: rgb(170, 169, 199);
     border: 1px solid black;
+    height: 400px;
 }
 
 section img {
