--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -162,7 +162,7 @@ footer {
     margin-right: 0px;
     max-width: 960px;
 }
-.town {
+.hopage {
     text-align: center;
     width: 100%;
     margin: auto;
