--- a/Lesson 9/css/large.css
+++ b/Lesson 9/css/large.css
@@ -111,7 +111,7 @@
         margin-left: auto;
         }
 
-        .town{
+        .hopage {
             display: block;
         }
     
@@ -130,7 +130,7 @@
             box-shadow: 10px 0 20px black;
         }
 
-        .town {
+        .hopage {
             display: block;
             margin: auto;
         }
