--- a/Lesson 9/css/medium.css
+++ b/Lesson 9/css/medium.css
@@ -71,7 +71,7 @@
     padding-bottom: 100px;
     }
 
-    .town{
+    .hopage {
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-content: center;
