--- a/Lesson 10/css/large.css
+++ b/Lesson 10/css/large.css
@@ -1,6 +1,6 @@
 @media (min-width: 64em) {
     header {
-        height: 150px;
+        height: 120px;
     }
     
     nav ul {
@@ -54,8 +54,8 @@
 
     #herosum {
         display: grid;
-        grid-template-columns: 200px 200px 200px 200px;
-        margin-left: 100px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        
     }
 
     #hero {
@@ -66,6 +66,9 @@
     #primero {
         border: 1px solid #FFDB30;
 	    box-shadow: 10px 10px 10px #004777;
+        display: block;
+        margin: auto;
+
     }
 
     #summary {
@@ -80,28 +83,16 @@
             text-align: center;
             line-height: 0.5px;
             color: green;
-            font-size: small;
+            font-size: large;
         
     }
 
-    .label {
-        display: inline;
-        grid-column: 4/5;
-        grid-row: 1/2;
-        color: white;
-        font-size: 30px;
-        text-align: center;
+    .imagen:hover {
+        border: 1px solid #FFDB30;
+	    box-shadow: 10px 10px 10px #004777;
     }
 
-    #large {
-        display: inline;
-    }
-    #medium {
-        display: none;
-    }
+   
 
-    #small {
-        display: none;
-    }
 
 }
