--- a/Lesson 9/css/prophets.css
+++ b/Lesson 9/css/prophets.css
@@ -21,7 +21,7 @@ h1, h2 {
      gap: 5px;
      margin: 5px;
      grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
-     
+     max-width: 960px;
 }
 
 section {
@@ -32,7 +32,7 @@ section {
 }
 
 section img {
-    width: 90%;
+    width: 80%;
     height: 200px;
     margin: auto;
     display: block;
