--- a/Lesson 9/css/large.css
+++ b/Lesson 9/css/large.css
@@ -134,6 +134,7 @@
         .hopage {
             display: block;
             margin: auto;
+            height: 500px;
         }
 
         h4 {
