--- a/Lesson 9/css/medium.css
+++ b/Lesson 9/css/medium.css
@@ -76,7 +76,7 @@
         grid-template-columns: 1fr 1fr;
         justify-content: center;
         justify-items: center;
-        width: 100%;
+        width: auto;
     }
     .data2 {
         grid-column: 1;
