--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -164,7 +164,7 @@ footer {
 }
 .hopage {
     text-align: center;
-    width: 100%;
+    width: auto;
     margin: auto;
     display: block;
     margin: 5px;
