--- a/Lesson 10/css/large.css
+++ b/Lesson 10/css/large.css
@@ -95,6 +95,15 @@
     .events section {
       width: 100px;
       height: 550px;
+      background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 0.5px;
+            color: green;
+            font-size: large;
     }
 
    
