--- a/Lesson 10/css/small.css
+++ b/Lesson 10/css/small.css
@@ -214,6 +214,26 @@ figure img {
     width: 100%;
 }
 
+.events {
+    grid-column: 1/5;
+    grid-row: 4/5;
+    background: radial-gradient(#eee, #4567aa);
+        border: 1px solid #000;
+        padding: 0.5px;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+        color: green;
+        text-align: center;
+        font-size: small;
+        margin-top: 10px;
+}
+
+h3 {
+   color:#DC0073; 
+}
+
+
+
 
 
 
