--- a/Lesson 10/css/small.css
+++ b/Lesson 10/css/small.css
@@ -33,6 +33,7 @@ header img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-left: 0;
+    margin-top: 40px;
 }
 
 #hero {
