--- a/Lesson 9/css/medium.css
+++ b/Lesson 9/css/medium.css
@@ -27,14 +27,15 @@
     }
 
     #herosum {
-        display: grid;
-        grid-template-columns: 1fr 180px 1fr 1fr;
-        margin-left: 0;
+        display: block;
     }
 
     #hero {
-        grid-column: 1/5;
-        grid-row: 1/4;
+        width: 100%;
+    }
+
+    #pupose {
+        margin: auto;
     }
 
     #primero {
