--- a/Lesson 7/css/small.css
+++ b/Lesson 7/css/small.css
@@ -96,13 +96,13 @@ th {
 
 #titulo {
     font-size: 45px;
-    color:#DC0073;
+    color: white;
     text-align: center;
 }
 
 #slogan {
     margin-bottom: 60px;
-    color:#DC0073;
+    color: white;
     font-size: 2rem;
     margin-top: -30px;
     text-align: center;
