--- a/Lesson 11/css/large.css
+++ b/Lesson 11/css/large.css
@@ -59,8 +59,31 @@
     }
 
     #hero {
-        grid-column: 1/5;
+        grid-column: 1/3;
         grid-row: 1/4;
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    #mist {
+        grid-column: 3/5;
+        grid-row: 1/2;
+        text-align: center;
+        color:#DC0073;
+    }
+
+    h1 {
+        color:#DC0073;
+        text-align: center;
+    }
+
+    #purpose {
+        grid-column: 3/5;
+        grid-row: 2/4;
+        text-align: justify;
+        margin-top: -30px;
+        margin-left: 10px;
+        font-size: 1.3rem;
     }
 
     #primero {
@@ -111,10 +134,6 @@
         margin-left: auto;
         }
 
-        .hopage {
-            display: block;
-            height: 400px;
-        }
     
         .home {
             display: grid;
@@ -135,6 +154,7 @@
             display: block;
             margin: auto;
             height: 500px;
+            width: 100%;
         }
 
         h4 {
