--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -39,6 +39,16 @@ header img {
     margin-left: 10px;
 }
 
+#mist {
+    text-align: center;
+    color:#DC0073;
+}
+
+h1 {
+    color:#DC0073;
+    text-align: center;
+}
+
 #primero {
     border: 1px solid #FFDB30;
     box-shadow: 10px 10px 10px #004777;
