--- a/Lesson 11/css/small.css
+++ b/Lesson 11/css/small.css
@@ -56,6 +56,16 @@ h2 {
     display: none;
 }
 
+#mist {
+    text-align: center;
+    color:#DC0073;
+}
+
+h1 {
+    color:#DC0073;
+    text-align: center;
+}
+
 #titulo {
     font-size: 45px;
     color: white;
