--- a/Lesson 11/css/small.css
+++ b/Lesson 11/css/small.css
@@ -119,7 +119,7 @@ nav ul.hide {
 
 #feedback {
     background-color: rgb(204, 191, 14);
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
